source/assets_site/stylesheets/_index.css.scss
body.index {
  h1 em {
    font-weight: 800;
  }

  .section1 {
    position: relative;
    color: #F8F8F8;
    font-weight: 300;
    background-color: $blue-gray;

    > .inner {
       @include outer-container;
       padding: 22vh 0 10vh;
       position: relative;
       z-index: 10;
       min-height: 90vh;

       *:first-child { margin-top: 0; } // ?
    }

    .hero-content {
      @include span-columns(10);
      @include shift(1);

      @include media($medium-screen) {
        @include span-columns(8 of 10);
        @include shift(1);
      }

      & h1 {
        font-size: 450%;
        font-weight: 300;
        margin-bottom: 0em;
      }

      & .hero-text {
        margin-bottom: 2em;
      }
    }

    .background {
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      z-index: 1;

      background: image-url("index/section1/go-hero-team.jpg");
      background-size: cover;
    }

    .hero-tri-text {
      width: 100px;
      background-color: transparent;
      height: 100px;
      position: absolute;
      right: 0;
      bottom: 0;
      z-index: 1;
      stroke: transparent;
      stroke-width: 10px;
      align-content: center;
    }

    .hero-triangle-text {
      color: #009926;
    }

    .hero-triangle {
      width: 0px;
      height: 0px;
      border-style: solid;
      border-width: 0 0 300px 200px;
      z-index: 1;
      position: absolute;
      right: 0;
      bottom: 0;
      border-color: transparent transparent black transparent;
    }

    h1 {
      font-weight: 300;
      text-shadow: 1.5px 1.5px 5px rgba(0, 0, 0, 0.5);
    }

    h2 {
      font-weight: 400;
      text-shadow: 1.5px 1.5px 5px rgba(0, 0, 0, 0.5);
    }

    .view-details {
      @include span-columns(12 of 12);
      text-align: center;
    
      .arrow {
        background: image-url("index/section1/arrow.svg");
        background-size: cover;
        width: 45px;
        height: 45px;
        display: block;
        text-align: center;
        margin: 0 auto 4px;
      }
    }
  }

  .section2 {
    .section2-triangle {
      position: absolute;
      width: 60vw;
      height: 0;
      border-color: transparent transparent transparent rgb(138, 77, 200);
      border-style: solid;
      border-width: 0 0 300px 200px;
    }
    > .inner {
      @include outer-container;
      padding: 3vh 0;
      @include media($medium-screen) {
        padding: 6vh 0;
      }
    }

    .cards {
      position: relative;
      @include clearfix;

      .card {
        @include span-columns(10 of 12);
        @include shift(1);

        @include media($medium-screen) {
          @include span-columns(4 of 12);
          @include shift(7);
          padding: 30vh 0 30vh 0;
        }

        padding: 0 0 5vh;
        position: relative;

        .card_title, .card_text {
          text-align: center;
          color: $base-font-color;

          @include media($medium-screen) {
            text-align: left;
          }
        }

        .card_title {
          font-weight: 600;
          text-transform: uppercase;
        }

        .card_text {
          font-size: 0.9em;

          @include media($medium-screen) {
            font-size: 0.95em;
          }

          @include media($large-screen) {
            font-size: 1em;
          }
        }

        &:last-child {
          padding-bottom: 0;
        }
      }
    }

    .images {
      > .inner {
        position: relative;
        max-width: 68em;
        margin: 0 auto;
      }

      position: absolute;
      left: 0;
      right: 0;
      display: none;

      @include media($medium-screen) {
        display: block;
      }

      .card_image {
        position: absolute;
        top: 0;
        left: 10%;
        max-width: 50%;
        max-height: 55vh;

        @include media($medium-screen) {
          max-width: 40%;
          max-height: 45vh;
        }

        &:first-child { position: relative; }
      }
    }
  }

  .section3 {
    background-color: #f5f5f5;
    padding: 5vh 0;

    .support-triangle{
      width: 0px;
      height: 0px;
      border-width: 80px 80px 80px 80px;
      border-color: rgb(218, 122, 248) transparent transparent transparent;
      border-style: solid;
      z-index: 0;
      position: absolute;
      right: 5vw;
      margin-top: -5vh;
    }

    > .inner {
      @include outer-container;
      padding: 0 5vh;
    }

    .header {
      font-weight: bold;
      font-size: 150%;
      padding: 1em 0;
      margin-top: 0;
    }

    .column {
      padding: 5vh 0;

      @include media($medium-screen) {
        @include span-columns(6 of 12);
      }

      h4 {
        font-weight: bold;
        text-align: left;
      }
    }

    ul {
      @extend %default-ul;
    }
  }

  .section4 {
    padding: 0 0;

    > .inner {
      @include outer-container;
      padding: 0 5vh;
    }

    .header {
      font-weight: bold;
      padding: 3vh 0;
    }

    .triangle-on-triangle {
      float: right;
      .equalateral-triangle {
        width: 0;
        height: 0;
        border-color: transparent transparent rgb(243, 71, 151) transparent;
        border-style: solid;
        border-width: 0 30px 30px 30px;
      }
    }

    .pricing {
      .row {
        @include fill-parent();
        @include row(table);
        padding: 0.5em 0;
        text-align: center;

        .number-of-pipelines {
          @include span-columns(4 of 12);
        }

        .addons-included {
          @include span-columns(4 of 12);
        }

        .price {
          @include span-columns(4 of 12);
        }

        &:last-child {
          border-bottom: transparent;
          @include reset-display;
        }

        &:nth-child(even) {
          background-color: #f1f1f1;
        }
      }
    }
  }

  .section5 {
    background-color: #f8f8f8;

    > .inner {
      @include outer-container;
      padding: 5vh 0;
    }

    .contact-us {
      float: right;
      position: relative;
      left: 50%;
      width: 500px;
      margin-top: 15%;
    }

    .contact-medium {
      color: rgb(244, 118, 202);
      font-weight: bold
    }

    .market {
      margin-left: 30%;
      padding: 0;
      border: 0;
      font: inherit;
      font-size: 100%;
      vertical-align: baseline;
    }

    .inner {
      display: inline-flex;
    }

    .header {
      position: relative;
      font-weight: bold;
      padding: 3vh 0;
      text-align: left;
    }

    .cf_sign_on {
      display: none;
    }

    .mktoLabel {
      margin-bottom: 10px;
    }

    .contactus-triangle {
      position: absolute;
      width: 70vw;
      height: 0;
      border-color: transparent transparent rgb(244, 118, 202) transparent;
      border-style: solid;
      border-width: 0 25vw 85vh 0;
    }
  }

  .section6 {
    background-color: #f8f8f8;
    min-height: auto;
    > .inner {
      @include outer-container;
      padding: 0 0;
    }

    .left-section {
      padding: 0 0;
      float: left;
      width: 50%;
      height: auto;

      #CD-book {
        margin: 5px;
      }
      #martin-fowler {
        margin: 5px;
      }
      #refactoring-book {
        margin: 5px;
      }

      .cd-images {
        display: inline-flex;
      }

      .foo {
        margin: 10px;
      }
      .bar {
        margin: 10px;
        margin-bottom: 100px;
      }
      .baz {
      }
      .header {
        float: left;
      }

      .joke {
        float: left;
        font-size: 0.7em;
        color: $gray;
        font-style: italic;
      }
      .about-TW-CD {
      }
    }

    .right-section {
      width: 50%;
      float: right;
      .CD-triangle {
        width: 50vw;
        height: 0px;
        border-style: solid;
        border-width: 0 0 50vw 20vw;
        right: 0;
        bottom: 0;
        border-color: transparent transparent rgb(176, 44, 132) transparent;
      }
      .jez-img {
        position: absolute;
        right: 0;
        padding: 15vw 5vw;
      }
      .jez-text {
        position: absolute;
        right: 0px;
        padding: 10vw 4vw;
        bottom: 0;
        width: 45%;
        color: white;
        text-align: right;
      }
    }

  }

  .section7 {
    .parallogram-sequence {
      display: inline-flex;
    }

    .parallogram {
      width: 33vw;
      height: 22vh;
      background: #f8f8f8;
    }

    .forward-parallogram {
      -webkit-transform: skew(30deg);
      -moz-transform: skew(30deg);
      -o-transform: skew(30deg);
      transform: skew(30deg);
    }

    .parallogram-content {
      position: absolute;
      z-index: 1;
      margin: 3%;
      max-width: 33vw;
      max-height: 10vh;
    }

    .backward-parallogram {
      -webkit-transform: skew(30deg);
      -moz-transform: skew(30deg);
      -o-transform: skew(30deg);
      transform: skew(-30deg);
    }
  }

  .fixedNav {
    display: none;
    position: fixed;
    top: 50%;
    right: 2rem;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    z-index: 1000;

    @include media($medium-screen) {
      display: block;
    }

    li {
      text-align: right;
    }

    a {
      position: relative;
      color: transparent;
      cursor: pointer;
      display: block;
      font-size: 12px;

      -webkit-transition: color 0.2s ease-out;
      transition: color 0.2s ease-out;

      &:hover { color: #6A6B6D; }

      &.active:after {
        background: #6A6B6D;
        width: 10px;
        height: 10px;
        right: -16px;
      }

      &:after {
        content: '';
        display: block;
        width: 8px;
        height: 8px;
        position: absolute;
        top: 50%;
        right: -15px;
        -webkit-transform: translateY(-50%);
        transform: translateY(-50%);

        background: #C6C7C8;
        border-radius: 8px;
        border: 1px solid #C0C0C0;

        -webkit-transition: all 0.2s ease-out;
      }
    }
  }
}

